# multi-llm-provider

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/multi_llm_provider/: __init__.py  base.py  claude_api.py  clipboard.py  factory.py  mistral_api.py  ollama.py  openai_api.py
tests/: test_base.py  test_claude_api.py  test_clipboard.py  test_factory.py  test_mistral_api.py  test_ollama.py  test_openai_api.py
